# Dan0

dan0/: .nekaj.txt.swp
dan0/git_test/: nekaj.txt
fe_ros/ros_catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
fe_ros/ros_catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
fe_ros/ros_catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall
fe_ros/ros_catkin_ws/devel/.private/fe_msgs/: .catkin  .rosinstall
fe_ros/ros_catkin_ws/devel/.private/fe_ros/: .catkin  .rosinstall  local_setup.sh
fe_ros/ros_catkin_ws/devel/.private/fe_ur/: .catkin  .rosinstall  local_setup.sh  setup.sh
fe_ros/ros_catkin_ws/devel/.private/ur10_moveit_config/: .catkin  .rosinstall  local_setup.sh
fe_ros/ros_catkin_ws/devel/.private/ur10e_moveit_config/: .catkin  .rosinstall  setup.sh
fe_ros/ros_catkin_ws/devel/.private/ur16e_moveit_config/: .catkin  local_setup.sh  setup.sh
fe_ros/ros_catkin_ws/devel/.private/ur3_moveit_config/: .catkin
fe_ros/ros_catkin_ws/devel/.private/ur3e_moveit_config/: .catkin  setup.sh
fe_ros/ros_catkin_ws/devel/.private/ur5_moveit_config/: .catkin  .rosinstall  local_setup.sh
fe_ros/ros_catkin_ws/devel/.private/ur5e_moveit_config/: .catkin  local_setup.sh  setup.sh
fe_ros/ros_catkin_ws/devel/.private/ur_description/: .catkin  .rosinstall
fe_ros/ros_catkin_ws/devel/.private/ur_gazebo/: .catkin  local_setup.sh
fe_ros/ros_catkin_ws/logs/fe_msgs/: build.cmake.000.log.stderr
fe_ros/ros_catkin_ws/logs/ur_kinematics/: build.make.000.log.stderr
fe_ros/ros_catkin_ws/src/: .rosinstall  .rosinstall.bak
fe_ros/ros_catkin_ws/src/fe_ros_workshop/fe_msgs/: CMakeLists.txt
fe_ros/ros_catkin_ws/src/fe_ros_workshop/fe_ros_workshop/: CMakeLists.txt  package.xml
snap/code/common/.cache/: gdk-pixbuf-loaders.cache
(+104 files in other folders)
